--- a/index.html
+++ b/index.html
@@ -6,40 +6,32 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <!-- SEO -->
-        <title>Portfolio Andriy Zhukov</title>
+        <title>AnKo Team</title>
         <meta
             name="description"
-            content="Portfolio of Andriy Zhukov showcasing projects, skills, and experience in web development."
+            content="Portfolio of AnKo Team showcasing projects, skills, and experience in web development."
         />
         <meta
             name="keywords"
-            content="Andriy Zhukov, portfolio, web development, React, JavaScript, frontend developer"
+            content="AnKo Team, portfolio, web development, React, JavaScript, frontend developer"
         />
-        <meta name="author" content="Andriy Zhukov" />
+        <meta name="author" content="AnKo Team" />
 
         <!-- Open Graph (OG) for social media -->
-        <meta property="og:title" content="Portfolio Andriy Zhukov" />
+        <meta property="og:title" content="AnKo Team" />
         <meta
             property="og:description"
-            content="Explore the portfolio of Andriy Zhukov, a skilled web developer specializing in React and modern web technologies."
+            content="Explore the portfolio of AnKo Team, a skilled web developer specializing in React and modern web technologies."
         />
-        <meta property="og:type" content="website" />
-        <meta
-            property="og:url"
-            content="https://andrey2528.github.io/PortfolioAZ/"
-        />
-        <meta
-            property="og:image"
-            content="https://andrey2528.github.io/PortfolioAZ/preview.png"
-        />
+       
         <meta property="og:locale" content="en_US" />
 
         <!-- Twitter Cards -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Portfolio Andriy Zhukov" />
+        <meta name="twitter:title" content="Portfolio AnKo Team" />
         <meta
             name="twitter:description"
-            content="Explore the portfolio of Andriy Zhukov, a skilled web developer specializing in React and modern web technologies."
+            content="Explore the portfolio of AnKo Team, a skilled web developer specializing in React and modern web technologies."
         />
         <meta
             name="twitter:image"
@@ -49,7 +41,6 @@
 
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="icon" type="image/png" href="/favicon.png" />
         <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
         <!-- Additional meta tags -->
@@ -59,8 +50,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Montserrat:wght@400;600&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     </head>
-    <body id="root">
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+    <body>
+        <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
