--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+        <!-- Performance Optimization -->
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://firestore.googleapis.com" />
+
         <!-- SEO -->
         <title>AnKo Team</title>
         <meta
